fix header overlaps w/ gui

--- a/src/components/Header/styles.sass
+++ b/src/components/Header/styles.sass
@@ -59,6 +59,7 @@
     position: absolute
     top: $space-s
     right: $space-l + $space-m
+    pointer-events: none
 
   &__link
     display: inline-block
@@ -74,6 +75,9 @@
       timing-function: $t-timing-function
 
   &.is-active
+    .header__links
+      pointer-events: all
+      
     .header__link 
       transform: translateY(0)
       opacity: 1
